<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/file_list_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/current_path"
        android:textSize="@dimen/bodyTextSmall"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:paddingHorizontal="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="8dp"
            android:text="@string/column_file"
            android:textSize="@dimen/bodyTextMedium"
            android:textStyle="bold" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#808080"
            android:paddingVertical="4dp"/>
        <TextView
            android:id="@+id/file_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="8dp"
            android:text="@string/column_size"
            android:textSize="@dimen/bodyTextMedium"
            android:textStyle="bold" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#808080"
            android:paddingVertical="4dp"/>

        <TextView
            android:id="@+id/file_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="8dp"
            android:text="@string/column_date"
            android:textSize="@dimen/bodyTextMedium"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:paddingHorizontal="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/file_list"
        android:paddingHorizontal="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/empty_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:text="@string/emptyList"
        android:textAlignment="center"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="30dp"
        android:visibility="gone" />

</LinearLayout>